<resources>
    <string name="app_name">Rad Guidelines</string>
    <string name="title_organ_detail">Organ Detail</string>
    <string-array name="no_yes_array">
        <item>no</item>
        <item>yes</item>
    </string-array>
    <string name="demographic_prompt">Demographic:</string>
    <string-array name="demographic_array">
        <item>General population</item>
        <item>Limited life expectancy or high risk comorbitidites</item>
    </string-array>
    <string name="organ_size_prompt">Size:</string>
    <string name="organ_cancer_history_prompt">Cancer History:</string>
    <string name="organ_malignancy_history_prompt">Malignancy History:</string>
    <string-array name="lung_incidental_solid_size_array">
        <item>&lt; 6 mm</item>
        <item>6 to 8 mm</item>
        <item>&gt; 8 mm</item>
    </string-array>
    <string-array name="lung_incidental_subsolid_size_array">
        <item>&lt; 6 mm</item>
        <item>&gt;= 6 mm</item>
    </string-array>
    <string-array name="lung_incidental_risk_level_array">
        <item>low risk</item>
        <item>high risk</item>
    </string-array>
    <string-array name="lung_incidental_nodule_type_array">
        <item>solid</item>
        <item>subsolid (ground glass)</item>
        <item>subsolid (part-solid)</item>
    </string-array>
    <string-array name="lung_incidental_number_array">
        <item>single</item>
        <item>multiple</item>
    </string-array>
    <string name="liver_ct_risk_level">Risk level:</string>
    <string-array name="liver_ct_risk_level_array">
        <item>low risk</item>
        <item>average risk</item>
        <item>high risk</item>
    </string-array>
    <string-array name="liver_ct_size_array">
        <item>&lt; 0.5 cm</item>
        <item>0.5 to 1.5 cm</item>
        <item>&gt; 1.5 cm</item>
    </string-array>
    <string name="liver_ct_attenuation">Attenuation:</string>
    <string-array name="liver_ct_attenuation_array">
        <item>low attenuation, benign features</item>
        <item>low attenuation, suspicious features</item>
        <item>flash filling (robust enhancement)</item>
    </string-array>
    <string name="liver_ct_imaging_features">Imaging features:</string>
    <string-array name="liver_ct_imaging_features_array">
        <item>benign diagnostic features</item>
        <item>no benign diagnostic features</item>
    </string-array>
    <string name="liver_lirads_observation_prompt">Observation in high-risk patients</string>
    <string-array name="liver_lirads_size_array">
        <item>&lt; 1.0</item>
        <item>between 1.0 and 2.0</item>
        <item>&gt;= 2.0</item>
    </string-array>
    <string-array name="liver_lirads_arterial_array">
        <item>hypo- or iso-enhancement</item>
        <item>hyper-enhancement</item>
    </string-array>
    <string-array name="liver_lirads_growth_rate_array">
        <item>slow growth rate</item>
        <item>50% or greater diameter increase in 6 months or less</item>
    </string-array>
    <string-array name="liver_lirads_ultrasound_array">
        <item>no corresponding discrete nodule</item>
        <item>discrete nodule corresponding to observation with washout appearance</item>
    </string-array>
    <string name="nonneoplastic_prompt">Non-neoplastic features:</string>
    <string-array name="renal_solid_nonneoplastic_array">
        <item>none</item>
        <item>focal pyelonephritis</item>
        <item>fat-containing, non-calcified</item>
    </string-array>
    <string-array name="renal_solid_size_array">
        <item>&lt; 1 cm</item>
        <item>1 to 3 cm</item>
        <item>&gt; 3 cm</item>
    </string-array>
    <string name="renal_cyst_solid">Cystic or Solid Lesion</string>
    <string name="renal_cyst_wall_prompt">Cyst wall:</string>
    <string-array name="renal_cyst_wall_array">
        <item>Hairline-thin wall</item>
        <item>Thickened irregular or smooth walls with measurable enhancement</item>
        <item>Enhancing soft tissue components adjacent to or separate from the wall or septa</item>
    </string-array>
    <string name="renal_cyst_attenuation_prompt">Attenuation:</string>
    <string-array name="renal_cyst_attenuation_array">
        <item>simple fluid attenuation</item>
        <item>homogeneous hyperattenuation</item>
    </string-array>
    <string name="renal_cyst_septation_prompt">Septations:</string>
    <string-array name="renal_cyst_septation_array">
        <item>no septations</item>
        <item>few thin septa</item>
        <item>multiple thin septa, or minimal smooth thickened septa</item>
        <item>thick irregular septa</item>
    </string-array>
    <string name="renal_cyst_calcification_prompt">Calcifications:</string>
    <string-array name="renal_cyst_calcification_array">
        <item>no calcifications</item>
        <item>thin or slightly thickened calcifications</item>
        <item>thick or nodular calcifications</item>
    </string-array>
    <string name="renal_cyst_enhancement_prompt">Enhancement:</string>
    <string-array name="renal_cyst_enhancement_array">
        <item>no enhancement</item>
        <item>measurable enhancement</item>
    </string-array>
    <string-array name="renal_cyst_size_array">
        <item>less than 3 cm</item>
        <item>more than 3 cm</item>
    </string-array>
    <string name="thyroid_us_composition">Composition:</string>
    <string-array name="thyroid_us_composition_array">
        <item>cystic or almost completely cystic</item>
        <item>spongiform</item>
        <item>mixed cystic and solid</item>
        <item>solid or almost completely solid</item>
    </string-array>
    <string name="thyroid_us_echogenicity">Echogenicity:</string>
    <string-array name="thyroid_us_echogenicity_array">
        <item>anechoic</item>
        <item>hyperechoic or isoechoic</item>
        <item>hypoechoic</item>
        <item>very hypoechoic</item>
    </string-array>
    <string name="thyroid_us_shape">Shape:</string>
    <string-array name="thyroid_us_shape_array">
        <item>wider than tall</item>
        <item>taller than wide</item>
    </string-array>
    <string name="thyroid_us_margin">Margins:</string>
    <string-array name="thyroid_us_margin_array">
        <item>smooth</item>
        <item>ill-defined</item>
        <item>lobulated or irregular</item>
        <item>extra-thyroidal extension</item>
    </string-array>
    <string name="thyroid_us_echogenic_foci">Echogenic foci:</string>
    <string-array name="thyroid_us_echogenic_foci_array">
        <item>none or large comet-tail artifacts</item>
        <item>coarse calcifications</item>
        <item>peripheral (rim) calcifications</item>
        <item>punctate echogenic foci</item>
    </string-array>
    <string name="thyroid_us_size">Nodule size:</string>
    <string name="suspicious_features_prompt">Suspicious features:</string>
    <string name="thyroid_ct_age">Age:</string>
    <string-array name="thyroid_ct_age_array">
        <item>&lt; 35 years</item>
        <item>&gt;= 35 years</item>
    </string-array>
    <string-array name="thyroid_ct_young_size_array">
        <item>&lt; 1 cm</item>
        <item>&gt;= 1 cm</item>
    </string-array>
    <string-array name="thyroid_ct_old_size_array">
        <item>&lt; 1.5 cm</item>
        <item>&gt;= 1.5 cm</item>
    </string-array>
    <string name="adrenal_diagnostic_features_prompt">Diagnostic features:</string>
    <string name="adrenal_prior_imaging_prompt">Prior Imaging:</string>
    <string name="adrenal_imaging_features_prompt">Imaging Features:</string>
    <string-array name="adrenal_incidental_diagnostic_array">
        <item>none</item>
        <item>simple cyst</item>
        <item>macroscopic fat, with or without calcifications</item>
        <item>less than 10 HU attenuation on CT or signal drop out on chemical shift MRI</item>
    </string-array>
    <string-array name="adrenal_incidental_size_array">
        <item>1 to 4 cm</item>
        <item>&gt; 4 cm</item>
    </string-array>
    <string-array name="adrenal_incidental_cancer_array">
        <item>no</item>
        <item>yes</item>
    </string-array>
    <string-array name="adrenal_incidental_prior_array">
        <item>none available</item>
        <item>stable over 1 year</item>
        <item>lesion enlarging</item>
    </string-array>
    <string-array name="adrenal_incidental_features_array">
        <item>benign</item>
        <item>suspicious</item>
    </string-array>
    <string name="adrenal_precontrast_prompt">Pre-contrast (HU):</string>
    <string name="adrenal_portalvenous_prompt">Portal venous (HU):</string>
    <string name="adrenal_delayed_prompt">15-minute delayed (HU):</string>
    <string name="adrenal_absolute_washout_prompt">Absolute Washout:</string>
    <string name="adrenal_relative_washout_prompt">Relative Washout:</string>
    <string name="vascular_cartoid_velocity_prompt">ICA Velocity:</string>
    <string name="vascular_carotid_ratio_prompt">ICA:CCA Ratio:</string>
    <string-array name="pancreas_cyst_size_array">
        <item>&lt; 2 cm</item>
        <item>2 to 3 cm</item>
        <item>&gt; 3 cm</item>
    </string-array>
    <string-array name="pancreas_cyst_medium_mri_array">
        <item>not available</item>
        <item>serous cystadenoma</item>
        <item>side branch IPMN</item>
        <item>uncharacterized cystic mass</item>
    </string-array>
    <string-array name="pancreas_cyst_large_character_array">
        <item>serous cystadenoma</item>
        <item>uncharacterized cystic mass or other cystic neoplasm</item>
    </string-array>
    <string-array name="vascular_aorta_size_array">
        <item>&lt; 2.5 cm</item>
        <item>2.5 to 2.9 cm</item>
        <item>3.0 to 3.4 cm</item>
        <item>3.5 to 3.9 cm</item>
        <item>4.0 to 4.4 cm</item>
        <item>4.5 to 5.0 cm</item>
        <item>5.0 to 5.5 cm</item>
        <item>&gt; 5.5 cm</item>
    </string-array>
    <string-array name="vascular_iliac_size_array">
        <item>no aneurysm</item>
        <item>2.5 to 2.9 cm</item>
        <item>3.0 to 3.5 cm</item>
        <item>&gt; 3.5 cm</item>
    </string-array>
    <string-array name="vascular_other_size_array">
        <item>no aneurysm</item>
        <item>&lt; 2.0 cm</item>
        <item>&gt;= 2.0 cm</item>
    </string-array>
    <string-array name="vascular_renal_size_array">
        <item>no aneurysm</item>
        <item>1.0 to 1.5 cm</item>
        <item>&gt; 1.5 cm</item>
    </string-array>
    <string-array name="vascular_carotid_velocity_array">
        <item>&lt; 125 cm/s</item>
        <item>125 to 230 cm/s</item>
        <item>&gt; 230 cm</item>
        <item>not detectable</item>
    </string-array>
    <string-array name="vascular_carotid_ratio_array">
        <item>&lt; 2.0</item>
        <item>2.0 to 4.0</item>
        <item>&gt; 4.0</item>
        <item>not detectable</item>
    </string-array>
    <string-array name="spleen_diagnostic_features_array">
        <item>benign</item>
        <item>indeterminate</item>
    </string-array>
    <string-array name="spleen_prior_array">
        <item>none</item>
        <item>stable for 1 year</item>
        <item>not stable</item>
    </string-array>
    <string-array name="spleen_suspicious_features_array">
        <item>suspicious</item>
        <item>indeterminate</item>
    </string-array>
    <string-array name="spleen_lesion_size_array">
        <item>&lt; 1 cm</item>
        <item>&gt;= 1 cm</item>
    </string-array>
    <string-array name="node_ct_imaging_features_array">
        <item>benign</item>
        <item>suspicious</item>
    </string-array>
    <string-array name="node_clinical_array">
        <item>benign</item>
        <item>lymphoproliferative disorder</item>
    </string-array>
</resources>