<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            style="@style/standardTextLabelStyle"
            android:text="@string/adrenal_diagnostic_features_prompt"
            />
        <Spinner
            android:id="@+id/spinner_adrenal_diagnostic"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/label_adrenal_size"
            style="@style/standardTextLabelStyle"
            android:text="@string/organ_size_prompt"
            />

        <Spinner
            android:id="@+id/spinner_adrenal_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/label_adrenal_prior_imaging"
            style="@style/standardTextLabelStyle"
            android:text="@string/adrenal_prior_imaging_prompt"
            />
        <Spinner
            android:id="@+id/spinner_adrenal_prior"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/label_cancer_history"
            style="@style/standardTextLabelStyle"
            android:text="@string/organ_cancer_history_prompt"
            />
        <Spinner
            android:id="@+id/spinner_adrenal_cancer_history"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/label_adrenal_features"
            style="@style/standardTextLabelStyle"
            android:text="@string/adrenal_imaging_features_prompt"
            />
        <Spinner
            android:id="@+id/spinner_adrenal_features"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/textview_adrenal_features_info"
        style="@style/subTextInfoStyle"
        android:visibility="gone"
        />


</LinearLayout>