<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
                <TextView
                    android:id="@+id/demographic_label"
                    style="@style/standardTextLabelStyle"
                    android:text="@string/demographic_prompt"/>

                <Spinner
                    android:id="@+id/spinner_demographic"
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
                <TextView
                    android:id="@+id/renal_cyst_wall_label"
                    style="@style/standardTextLabelStyle"
                    android:text="@string/renal_cyst_wall_prompt"
                    />
                <Spinner
                    android:id="@+id/spinner_cyst_wall"
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
                <TextView
                    android:id="@+id/renal_attenuation_label"
                    style="@style/standardTextLabelStyle"
                    android:text="@string/renal_cyst_attenuation_prompt"
                    />
                <Spinner
                    android:id="@+id/spinner_cyst_attenuation"
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
                <TextView
                    android:id="@+id/renal_septation_label"
                    style="@style/standardTextLabelStyle"
                    android:text="@string/renal_cyst_septation_prompt"
                    />
                <Spinner
                    android:id="@+id/spinner_cyst_septations"
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
                <TextView
                    android:id="@+id/renal_calcification_label"
                    style="@style/standardTextLabelStyle"
                    android:text="@string/renal_cyst_calcification_prompt"
                    />
                <Spinner
                    android:id="@+id/spinner_cyst_calcifications"
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
                <TextView
                    android:id="@+id/renal_enhancement_label"
                    style="@style/standardTextLabelStyle"
                    android:text="@string/renal_cyst_enhancement_prompt"
                    />
                <Spinner
                    android:id="@+id/spinner_cyst_enhancement"
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
                <TextView
                    android:id="@+id/renal_cyst_size_label"
                    style="@style/standardTextLabelStyle"
                    android:text="@string/size_prompt"
                    />
                <Spinner
                    android:id="@+id/spinner_cyst_size"
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />
        </LinearLayout>


</LinearLayout>