<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/label_liver_ct_risk_level"
            style="@style/standardTextLabelStyle"
            android:text="@string/liver_ct_risk_level"
            />
        <Spinner
            android:id="@+id/spinner_liver_ct_risk_level"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/textview_liver_ct_risk_level"
        style="@style/secondaryTextInfoStyle"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/label_liver_ct_size"
            style="@style/standardTextLabelStyle"
            android:text="@string/size_prompt"
            />
        <Spinner
            android:id="@+id/spinner_liver_ct_size"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/label_liver_ct_attenuation"
            style="@style/standardTextLabelStyle"
            android:text="@string/liver_ct_attenuation"
            />
        <Spinner
            android:id="@+id/spinner_liver_ct_attenuation"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/textview_liver_ct_attenuation_info"
        style="@style/secondaryTextInfoStyle"
        android:visibility="gone"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/label_liver_ct_features"
            style="@style/standardTextLabelStyle"
            android:text="@string/liver_ct_imaging_features"
            />
        <Spinner
            android:id="@+id/spinner_liver_ct_features"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/textview_liver_ct_features_info"
        style="@style/secondaryTextInfoStyle"
        android:visibility="gone"
        />



</LinearLayout>