<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            style="@style/standardTextLabelStyle"
            android:text="Location:"
            />
        <Spinner
            android:id="@+id/spinner_pirads_location"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            style="@style/standardTextLabelStyle"
            android:text="T2 Signal"
            />
        <Spinner
            android:id="@+id/spinner_pirads_t2"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            style="@style/standardTextLabelStyle"
            android:text="@string/renal_cyst_septation_prompt"
            />
        <Spinner
            android:id="@+id/spinner_cyst_septations"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            style="@style/standardTextLabelStyle"
            android:text="@string/renal_cyst_calcification_prompt"
            />
        <Spinner
            android:id="@+id/spinner_cyst_calcifications"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            style="@style/standardTextLabelStyle"
            android:text="@string/renal_cyst_enhancement_prompt"
            />
        <Spinner
            android:id="@+id/spinner_cyst_enhancement"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            style="@style/standardTextLabelStyle"
            android:text="@string/size_prompt"
            />
        <Spinner
            android:id="@+id/spinner_cyst_size"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </LinearLayout>


</LinearLayout>